Fixes 'Throttle non-visible cross-origin iframes' chrome feature for loading tasks

--- a/src/assets/scss/helpers.scss
+++ b/src/assets/scss/helpers.scss
@@ -83,3 +83,7 @@
   justify-content: center;
   align-items: center;
 }
+
+.alg-opacity-0 {
+  opacity: 0 !important;
+}
